# Trabalhos_IC_Aplicada

./: Edited_tex.txt  LICENSE  Makefile  README.md  Resultados.txt  convert.py  modificações.txt  package-lock.json  pyproject.toml  requirements.txt  run_all_experiments.sh
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/TC1/: 0.01-ljlb-explorando-prob.ipynb  0.03-ljlb-regressao-multipla-MQO.ipynb  1.03-ljlb-regressao-modelos_complementares.ipynb  1.03-ljlb-regressao-perceptron-simples.ipynb  2.03-ljlb-regressao-MLP_H1.ipynb  2.03-ljlb-regressao-MLP_H2.ipynb
notebooks/TC2/: analise_pca_luz_controlada.ipynb  analise_qualitativa_pca.ipynb  analise_roc_intruso.ipynb  test_pca_sklearn.ipynb
references/: Aprofudnamento_TC1.md  Aprofudnamento_TC2.md  atividades_tcICAp2,md  facelab_numpy_estrutura_e_codigo_base_sem_sklearn.md  tarefas_trab2.md
relatorio/: critica_relatorio_final.md  main.txt  relatorio_A1_A4.tex  relatorio_A5_A6.tex  relatorio_A7.tex  relatorio_A8.tex
relatorio/tc2/: CHANGELOG.md
results/: .~lock.tabela1.csv#  analise_final_2_tc2.md  analise_v2_tc2.md  analise_v3_tc2.md  pca_q_98.txt  tabela1.csv  tabela2.csv  tabela3.csv  tabela3_boxcox.csv  tabela3_comparativo_A7.csv
results/TC2/: pca_q_98.txt  tabela1.csv  tabela2.csv  tabela3.csv  tabela3_boxcox.csv  tabela3_comparativo_A7.csv  tabela4_intruso.csv  tabela4_intruso_unario.csv
src/: tc2_faces_A1_A4.py  tc2_faces_A5_A6.py  tc2_faces_A7.py  tc2_faces_A8.py  tc2_faces_A8_unario.py  tetsting_pl.py
trabalho_ic_aplicada/: __init__.py  dataset.py  dataset_faces.py  features.py  plots.py
(+42 files in other folders)
