[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "trabalho_ic_aplicada"
version = "0.0.1"
description = "Desenvolvimento dos trabalhos de ICAp do PPGETI"
authors = [
  { name = "Lucas J. L. Braz" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.0"
dependencies = [
    "black>=25.1.0",
    "flake8>=7.3.0",
    "imageio>=2.37.0",
    "isort>=6.0.1",
    "jupyter>=1.1.1",
    "loguru>=0.7.3",
    "matplotlib>=3.10.3",
    "mkdocs>=1.6.1",
    "pandas>=2.3.1",
    "pandas-stubs==2.3.0.250703",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
    "tqdm>=4.67.1",
    "typer>=0.16.0",
    "ucimlrepo>=0.0.7",
]

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["trabalho_ic_aplicada"]
force_sort_within_sections = true


